--- a/index.html
+++ b/index.html
@@ -8,6 +8,78 @@
     <link type="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Init html page</p>
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <h1>Kahanovski Vladimir</h1>
+        <h2>About me</h2>
+        <p>Programming is a hobby. I am a chemical engineer.<br>
+         I want to learn how to develop high-quality web applications.</p>
+        <h2>Skills</h2>
+        <p>
+            <ol>
+                <li> Programming languages</li>
+                <ul>
+                    <li> Delphi</li>
+                    <li> C</li>
+                    <li> SQL</li>
+                    <li> Python</li>
+                    <li> Visual Basic for Application (VBA)</li>
+                    <li> HTML</li>
+                </ul>
+                <li> Operation systems</li>
+                <ul>
+                    <li> Windows</li>
+                    <li> FreeBSD</li>
+                </ul>
+                <li> Development tools</li>
+                <ul>
+                    <li> CodeVision AVR</li>
+                    <li> Delphi 7</li>
+                    <li> Visual Studio Code</li>
+                </ul>
+            </ol>
+        </p>
+
+        <h2>Sample code</h2>
+        <p><code>
+        <pre>
+def shell_sort(data: list[int]) -> list[int]:
+    last_index = len(data) - 1
+    step = len(data)//2
+    while step > 0:
+        for i in range(step, last_index + 1, 1):
+            j = i
+            delta = j - step
+            while delta >= 0 and data[delta] > data[j]:
+                data[delta], data[j] = data[j], data[delta]
+                j = delta
+                delta = j - step
+        step //= 2
+    return data
+            </pre>
+        </code></p>
+
+        <h2>Work experiance</h2>
+        <p>As an example, a website written in delphi 7.
+            <a href="http://flomaster.by" title="Simple site">Flomaster.by</a></p>
+        
+        <h2>Education and training</h2>
+        <p>In 2012 graduated from the Belarusian State Technological University with a degree in chemical engineering.</p>
+        
+        <h2>Languages</h2>
+        <p><ul>
+            <li> Belorussian</li>
+            <li> Russian</li>
+            <li> English **Pre-Intermediate** (А2)</li>
+           <ul>
+        </p>
+    </main>
+    <footer>
+        <img src="image/rs_school.svg" alt="Logo course" width="100px"> <a href="https://rs.school/js/">Course «JavaScript/Front-end»</a>
+        <img src="image/git.png" alt="Logo git" width="64px"> <a href="https://github.com/dyexplode">My GitHub</a>
+        <p> &COPY; 2021</p>
+    </footer>
 </body>
 </html>
