feat: Add background and Avatar

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum vitae</title>
-    <link type="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body><div>
     <header>
+        <img src="image/avatar_width=300px.png" alt="Avatar">
         <nav></nav>
     </header>
     <main>
@@ -81,5 +82,6 @@ def shell_sort(data: list[int]) -> list[int]:
         <img src="image/git.png" alt="Logo git" width="64px"> <a href="https://github.com/dyexplode">My GitHub</a>
         <p> &COPY; 2021</p>
     </footer>
+</div>
 </body>
 </html>
