fix: Border from footer

--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@ def shell_sort(data: list[int]) -> list[int]:
         </p>
     </main>
     <footer>
+	<section>
         <img src="image/rs_school.svg" alt="Logo course" width="100px"> <a href="https://rs.school/js/">Course «JavaScript/Front-end»</a>
         <img src="image/git.png" alt="Logo git" width="64px"> <a href="https://github.com/dyexplode">My GitHub</a>
         <p> &COPY; 2021</p>
+	</section>	
     </footer>
 
 </body>
