feat: Add lcd 1602 in header HTML page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <header>
         <img src="image/avatar_width=300px.png" alt="Avatar" width=200px>
         <h1>Kahanovski Vladimir</h1>
-            <h2>Contact information</h2>
-            <p>E-mail: admin@ttp.by</p>
-            <p>Tel.: +375-29-535-15-27</p>
+            <div class="contacts">
+                <div>
+                    <h2>Contact information</h2>
+                    <p>E-mail: admin@ttp.by</p>
+                    <p>Tel.: +375-29-535-15-27</p>
+                </div>
+            </div>
         
         
         <nav>
