fix: Fix numeration in numeric list

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <h2 id="skills">Skills</h2>
         
             <ol>
-                <li> Programming languages</li>
-                <li><ul>
+                <li> Programming languages
+                    <ul>
                         <li> Delphi</li>
                         <li> C</li>
                         <li> SQL</li>
@@ -59,14 +59,14 @@
                         <li> HTML</li>
                     </ul>
                 </li>
-                <li> Operation systems</li>
-                <li><ul>
+                <li> Operation systems
+                    <ul>
                         <li> Windows</li>
                         <li> FreeBSD</li>
                     </ul>
                 </li>
-                <li> Development tools</li>
-                <li><ul>
+                <li> Development tools
+                    <ul>
                         <li> CodeVision AVR</li>
                         <li> Delphi 7</li>
                         <li> Visual Studio Code</li>
