fix: Fix display header from mobile devices

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
     <!--Header part of site-->
     <header>
-        <img src="image/avatar_width=300px.png" alt="Avatar" width="200">
+        <img src="image/avatar_width=300px.png" alt="Avatar" width="200" title="Happy New Year!!!">
         <h1>Kahanovski Vladimir</h1>
-            <div class="contacts">
+            <div class="contacts" title="Contact information">
                 <div>
                     <h2>Contact information</h2>
                     <p>E-mail: admin@ttp.by</p>
