feat: Add Work experians

--- a/index.html
+++ b/index.html
@@ -99,8 +99,11 @@ def shell_sort(data: list[int]) -> list[int]:
     </pre>
 
         <h2 id="work">Work experiance</h2>
+        <p>I don't have a large number of projects that are worthy of attention and at the same time working online.</p>
         <p>As an example, a website written in delphi 7.
             <a href="http://flomaster.by" title="Example site">Flomaster.by</a></p>
+        <p>And my CV from RS SCHOOL.
+                <a href="https://dyexplode.github.io/rsschool-cv/" title="My first CV">CV. HTML and CSS basics</a></p>
         
         <h2 id="education">Education and training</h2>
         <p>In 2012 graduated from the Belarusian State Technological University with a degree in chemical engineering.</p>
