fix: Font code block --> change to different

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
          I want to learn developing high-quality web applications.
         </p>
     </section>
-      <section>
+      <section class="skills-ex">
         <h2 id="skills">Skills</h2>
         
             <ol>
