--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum vitae</title>
-    <link rel="shortcut icon" href="image/favicon.ico">
+    <link rel="shortcut icon" href="assets/icons/favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrap">
     <!--Header part of site-->
     
-    
-
     <div class="container-main"> 
         <header>
 
