--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <!--And my CV from RS SCHOOL.
                 <a href="https://dyexplode.github.io/rsschool-cv/" title="My first CV">CV. HTML and CSS basics</a></p>
         -->
-        <p>In process learning on course "JavaScript/Front-end. Stage 0" of RS School I made some projects:
+        <p>In process learning on course "JavaScript/Front-end. Stage 0" of RS School I made some projects:</p>
             <ul>
                 <li><a href="https://dyexplode.github.io/rsschool-cv/" title="The first project in course">My CV</a></li>
                 <li><a href="https://rolling-scopes-school.github.io/dyexplode-JSFEPRESCHOOL/portfolio/" title="Make this project from Figma pattern">Portfolio</a></li>
@@ -174,7 +174,7 @@
                 <li><a href="https://rolling-scopes-school.github.io/dyexplode-JSFEPRESCHOOL/movie-app/" title="Example to usage API">Movie-app</a></li>
                 <li><a href="https://rolling-scopes-school.github.io/dyexplode-JSFEPRESCHOOL/random-game/" title="I like this game">Game three in row</a></li>
             </ul>
-        </p>
+        
 
 
         
