feat: Add the Shelter and remove flomaster

--- a/index.html
+++ b/index.html
@@ -161,15 +161,16 @@
       <section class="work-ex"> 
         <h2 id="work">Work experiance</h2>
         <p>I haven't many projects which are noteworthy and at the same time available online.</p>
-        <p>I had had one working website as an example, before I started learning in course RS School "JavaScript/Front-end. Stage 0" . This website was written in delphi 7 in 2013.
+        <!--<p>I had had one working website as an example, before I started learning in course RS School "JavaScript/Front-end. Stage 0" . This website was written in delphi 7 in 2013.
             <a href="http://flomaster.by" title="Example site">Flomaster.by</a></p>
-        <!--And my CV from RS SCHOOL.
+        And my CV from RS SCHOOL.
                 <a href="https://dyexplode.github.io/rsschool-cv/" title="My first CV">CV. HTML and CSS basics</a></p>
         -->
         <p>In process learning on course "JavaScript/Front-end. Stage 0" of RS School I made some projects:</p>
             <ul>
                 <li><a href="https://dyexplode.github.io/rsschool-cv/" title="The first project in course">My CV</a></li>
                 <li><a href="https://rolling-scopes-school.github.io/dyexplode-JSFEPRESCHOOL/portfolio/" title="Make this project from Figma pattern">Portfolio</a></li>
+                <li><a href="https://rolling-scopes-school.github.io/dyexplode-JSFEPRESCHOOL/shelter/pages/main/" title="Make this project at Stage 1">Shelter</a></li>
                 <li><a href="https://rolling-scopes-school.github.io/dyexplode-JSFEPRESCHOOL/eco-sounds/" title="Learn to work with audio in Javascript">Eco-sounds</a></li>
                 <li><a href="https://rolling-scopes-school.github.io/dyexplode-JSFEPRESCHOOL/movie-app/" title="Example to usage API">Movie-app</a></li>
                 <li><a href="https://rolling-scopes-school.github.io/dyexplode-JSFEPRESCHOOL/random-game/" title="I like this game">Game three in row</a></li>
